--- a/random_forest.ipynb
+++ b/random_forest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
        "WindowsPath('C:/Users/pavel/OneDrive/Desktop/it_cup')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
        "             verbose=2)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,17 +143,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RandomForestClassifier(n_jobs=8, random_state=42)\n",
-      "{'class_weight': None}\n",
-      "0.9078786618402633\n",
-      "{'mean_fit_time': array([109.10598811]), 'std_fit_time': array([1.27976619]), 'mean_score_time': array([2.12066062]), 'std_score_time': array([0.52304642]), 'param_class_weight': masked_array(data=[None],\n",
+      "{'mean_fit_time': array([96.43836196]), 'std_fit_time': array([1.044345]), 'mean_score_time': array([1.837418]), 'std_score_time': array([0.41410081]), 'param_class_weight': masked_array(data=[None],\n",
       "             mask=[False],\n",
       "       fill_value='?',\n",
       "            dtype=object), 'params': [{'class_weight': None}], 'split0_test_accuracy': array([0.90793185]), 'split1_test_accuracy': array([0.90806308]), 'split2_test_accuracy': array([0.90764105]), 'mean_test_accuracy': array([0.90787866]), 'std_test_accuracy': array([0.00017635]), 'rank_test_accuracy': array([1]), 'split0_test_f1': array([0.007661]), 'split1_test_f1': array([0.00862275]), 'split2_test_f1': array([0.00621415]), 'mean_test_f1': array([0.0074993]), 'std_test_f1': array([0.00098993]), 'rank_test_f1': array([1]), 'split0_test_roc_auc': array([0.71735369]), 'split1_test_roc_auc': array([0.71440956]), 'split2_test_roc_auc': array([0.71588778]), 'mean_test_roc_auc': array([0.71588368]), 'std_test_roc_auc': array([0.00120194]), 'rank_test_roc_auc': array([1]), 'split0_test_precision': array([0.43243243]), 'split1_test_precision': array([0.5]), 'split2_test_precision': array([0.28888889]), 'mean_test_precision': array([0.40710711]), 'std_test_precision': array([0.08802653]), 'rank_test_precision': array([1]), 'split0_test_recall': array([0.00386473]), 'split1_test_recall': array([0.00434888]), 'split2_test_recall': array([0.00314086]), 'mean_test_recall': array([0.00378482]), 'std_test_recall': array([0.0004964]), 'rank_test_recall': array([1])}\n"
@@ -161,10 +158,33 @@
     }
    ],
    "source": [
-    "print(validator.best_estimator_)\n",
-    "print(validator.best_params_)\n",
-    "print(validator.best_score_)\n",
+    "#print(validator.best_estimator_)\n",
+    "#print(validator.best_params_)\n",
+    "#print(validator.best_score_)\n",
     "print(validator.cv_results_)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1111\n",
+      "m_acc:     [0.90787866]\n",
+      "m_f1:      [0.0074993]\n",
+      "m_rauc:    [0.71588368]\n",
+      "m_prec:    [0.40710711]\n",
+      "m_recall:  [0.00378482]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from utils import fine_print\n",
+    "fine_print(validator.cv_results_)"
    ]
   },
   {
