--- a/random_forest.ipynb
+++ b/random_forest.ipynb
@@ -9,11 +9,13 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "from pathlib import Path\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.model_selection import GridSearchCV, StratifiedKFold\n",
+    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.impute import SimpleImputer\n",
+    "from utils import save_config\n",
     "\n",
-    "pd.set_option('display.max_rows', 150)"
+    "pd.set_option('display.max_rows', 150)\n",
+    "ID = 1"
    ]
   },
   {
@@ -62,16 +64,40 @@
    "outputs": [],
    "source": [
     "X = data.iloc[:, 2:]\n",
-    "y = data.iloc[:, 1]"
+    "y = data.iloc[:, 1]\n",
+    "\n",
+    "X = SimpleImputer(missing_values=np.nan, strategy='mean').fit_transform(X)\n",
+    "\n",
+    "X_train, X_val, y_train, y_val = train_test_split(X, y, shuffle=False, train_size=0.3, random_state=42)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\pavel\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\sklearn\\metrics\\_classification.py:1308: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "X = SimpleImputer(missing_values=np.nan, strategy='mean').fit_transform(X)"
+    "from sklearn.metrics import accuracy_score, f1_score, roc_auc_score, confusion_matrix, recall_score, precision_score\n",
+    "precision_score(y, np.zeros_like(y))"
    ]
   },
   {
@@ -80,12 +106,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "config = {\n",
+    "rf_config = {\n",
     "    #'n_estimators': [200, 500],\n",
     "    #'max_features': ['auto', 'sqrt', 'log2'],\n",
     "    #'max_depth' : [4,5,6,7,8],\n",
     "    #'criterion' :['gini', 'entropy'],\n",
-    "    'class_weight': [None]#, {0: 122643, 1: 12418}]\n",
+    "    'class_weight': [{0: 0.09, 1: 0.91}]\n",
+    "}\n",
+    "\n",
+    "gb_config = {\n",
+    "    'learning_rate': [0.1],\n",
+    "    'n_estimators': [200]\n",
     "}\n",
     "\n",
     "scoring = ['accuracy', 'f1', 'roc_auc', 'precision', 'recall']"
@@ -97,7 +128,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clf = RandomForestClassifier(random_state=rand_seed, n_jobs=8)"
+    "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier\n",
+    "\n",
+    "clf = RandomForestClassifier(random_state=rand_seed, n_jobs=8)\n",
+    "#clf = GradientBoostingClassifier(random_state=rand_seed)"
    ]
   },
   {
@@ -106,8 +140,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "CUR_CONFIG = rf_config\n",
+    "\n",
+    "save_config(ID, CUR_CONFIG, clf)\n",
+    "ID += 1\n",
+    "\n",
     "cv = StratifiedKFold(n_splits=3, shuffle=True, random_state=rand_seed)\n",
-    "validator = GridSearchCV(clf, param_grid=config, scoring=scoring, n_jobs=4, cv=cv, refit='accuracy', verbose=2)"
+    "validator = GridSearchCV(clf, param_grid=CUR_CONFIG, scoring=scoring, n_jobs=4, cv=cv, refit='f1', verbose=2)"
    ]
   },
   {
@@ -127,7 +166,8 @@
       "text/plain": [
        "GridSearchCV(cv=StratifiedKFold(n_splits=3, random_state=42, shuffle=True),\n",
        "             estimator=RandomForestClassifier(n_jobs=8, random_state=42),\n",
-       "             n_jobs=4, param_grid={'class_weight': [None]}, refit='accuracy',\n",
+       "             n_jobs=4, param_grid={'class_weight': [{0: 0.09, 1: 0.91}]},\n",
+       "             refit='f1',\n",
        "             scoring=['accuracy', 'f1', 'roc_auc', 'precision', 'recall'],\n",
        "             verbose=2)"
       ]
@@ -138,7 +178,7 @@
     }
    ],
    "source": [
-    "validator.fit(X, y)"
+    "validator.fit(X_train, y_train)"
    ]
   },
   {
@@ -150,18 +190,44 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'mean_fit_time': array([96.43836196]), 'std_fit_time': array([1.044345]), 'mean_score_time': array([1.837418]), 'std_score_time': array([0.41410081]), 'param_class_weight': masked_array(data=[None],\n",
+      "RandomForestClassifier(class_weight={0: 0.09, 1: 0.91}, n_jobs=8,\n",
+      "                       random_state=42)\n",
+      "{'class_weight': {0: 0.09, 1: 0.91}}\n",
+      "0.008910703284189306\n",
+      "{'mean_fit_time': array([14.9789416]), 'std_fit_time': array([0.17603397]), 'mean_score_time': array([0.36668706]), 'std_score_time': array([0.01846776]), 'param_class_weight': masked_array(data=[{0: 0.09, 1: 0.91}],\n",
       "             mask=[False],\n",
       "       fill_value='?',\n",
-      "            dtype=object), 'params': [{'class_weight': None}], 'split0_test_accuracy': array([0.90793185]), 'split1_test_accuracy': array([0.90806308]), 'split2_test_accuracy': array([0.90764105]), 'mean_test_accuracy': array([0.90787866]), 'std_test_accuracy': array([0.00017635]), 'rank_test_accuracy': array([1]), 'split0_test_f1': array([0.007661]), 'split1_test_f1': array([0.00862275]), 'split2_test_f1': array([0.00621415]), 'mean_test_f1': array([0.0074993]), 'std_test_f1': array([0.00098993]), 'rank_test_f1': array([1]), 'split0_test_roc_auc': array([0.71735369]), 'split1_test_roc_auc': array([0.71440956]), 'split2_test_roc_auc': array([0.71588778]), 'mean_test_roc_auc': array([0.71588368]), 'std_test_roc_auc': array([0.00120194]), 'rank_test_roc_auc': array([1]), 'split0_test_precision': array([0.43243243]), 'split1_test_precision': array([0.5]), 'split2_test_precision': array([0.28888889]), 'mean_test_precision': array([0.40710711]), 'std_test_precision': array([0.08802653]), 'rank_test_precision': array([1]), 'split0_test_recall': array([0.00386473]), 'split1_test_recall': array([0.00434888]), 'split2_test_recall': array([0.00314086]), 'mean_test_recall': array([0.00378482]), 'std_test_recall': array([0.0004964]), 'rank_test_recall': array([1])}\n"
+      "            dtype=object), 'params': [{'class_weight': {0: 0.09, 1: 0.91}}], 'split0_test_accuracy': array([0.87390789]), 'split1_test_accuracy': array([0.87346365]), 'split2_test_accuracy': array([0.87383385]), 'mean_test_accuracy': array([0.87373513]), 'std_test_accuracy': array([0.00019433]), 'rank_test_accuracy': array([1]), 'split0_test_f1': array([0.00930774]), 'split1_test_f1': array([0.00927536]), 'split2_test_f1': array([0.00814901]), 'mean_test_f1': array([0.0089107]), 'std_test_f1': array([0.00053876]), 'rank_test_f1': array([1]), 'split0_test_roc_auc': array([0.6760445]), 'split1_test_roc_auc': array([0.67471063]), 'split2_test_roc_auc': array([0.67483062]), 'mean_test_roc_auc': array([0.67519525]), 'std_test_roc_auc': array([0.00060251]), 'rank_test_roc_auc': array([1]), 'split0_test_precision': array([0.38095238]), 'split1_test_precision': array([0.30769231]), 'split2_test_precision': array([0.36842105]), 'mean_test_precision': array([0.35235525]), 'std_test_precision': array([0.03199315]), 'rank_test_precision': array([1]), 'split0_test_recall': array([0.00471143]), 'split1_test_recall': array([0.00470865]), 'split2_test_recall': array([0.00412007]), 'mean_test_recall': array([0.00451338]), 'std_test_recall': array([0.00027812]), 'rank_test_recall': array([1])}\n"
      ]
     }
    ],
    "source": [
-    "#print(validator.best_estimator_)\n",
-    "#print(validator.best_params_)\n",
-    "#print(validator.best_score_)\n",
+    "print(validator.best_estimator_)\n",
+    "print(validator.best_params_)\n",
+    "print(validator.best_score_)\n",
     "print(validator.cv_results_)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "m_acc:     [0.87373513]\n",
+      "m_f1:      [0.0089107]\n",
+      "m_rauc:    [0.67519525]\n",
+      "m_prec:    [0.35235525]\n",
+      "m_recall:  [0.00451338]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from utils import fine_print\n",
+    "fine_print(validator.cv_results_)"
    ]
   },
   {
@@ -170,21 +236,46 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "array([[87160,    61],\n",
+       "       [ 7290,    32]], dtype=int64)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import confusion_matrix\n",
+    "preds = validator.predict(X_val)\n",
+    "confusion_matrix(y_val, preds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1111\n",
-      "m_acc:     [0.90787866]\n",
-      "m_f1:      [0.0074993]\n",
-      "m_rauc:    [0.71588368]\n",
-      "m_prec:    [0.40710711]\n",
-      "m_recall:  [0.00378482]\n"
+      "0.9222470198745545\n",
+      "0.008631153068105192\n",
+      "0.5018355088731031\n",
+      "0.34408602150537637\n",
+      "0.004370390603660202\n"
      ]
     }
    ],
    "source": [
-    "from utils import fine_print\n",
-    "fine_print(validator.cv_results_)"
+    "print(accuracy_score(y_val, preds))\n",
+    "print(f1_score(y_val, preds))\n",
+    "print(roc_auc_score(y_val, preds))\n",
+    "print(precision_score(y_val, preds))\n",
+    "print(recall_score(y_val, preds))"
    ]
   },
   {
